--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 
-<body class="bg-white dark:bg-black">
+<body class="bg-white dark:bg-dark">
   <nav>
     <div class="nav-container dark:text-white lg:px-24 lg:py-7 flex justify-between items-center tracking-widest">
       <div class="logo">
@@ -277,7 +277,7 @@
 
         <div class="gtworld lg:mb-0 lg:pt-24">
           <p class="num font-caudex lg:text-xl">02</p>
-          <p class="product font-caudex lg:pb-5 lg:text-5xl tracking-tighter dark:text-white">GTWorld Banking App</p>
+          <p class="product font-caudex lg:pb-5 lg:text-5xl tracking-tighter dark:text-white"><a href="gtbank.html">GTWorld Banking App</a></p>
           <p class="deats lg:text-xs">A new experience to online banking.</p>
         </div>
 
