--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -95,12 +95,12 @@
                 </p>
             </div>
 
-            <div class="why-jumia mt-20">
+            <div class="why-jumia mt-20 space-y-5">
                 <p class="why-jumia-header-text font-caudex text-white text-xl lg:text-2xl">
                     Why Jumia
                 </p>
 
-                <p class="why-jumia-text font-sf text-primary text-sm mt-4 lg:mt-8">
+                <p class="why-jumia-text font-sf text-primary text-sm">
                     Jumia is the leading pan-African e-commerce platform active across 11 countries on the continent.
                     The
                     platform consists
@@ -140,10 +140,10 @@
                 </p>
             </div>
 
-            <div class="ideation mt-24">
-                <p class="ideation-header-text font-caudex text-white text-xl lg:text-2xl lg:mt-40">Ideation</p>
+            <div class="ideation mt-24 space-y-5">
+                <p class="ideation-header-text font-caudex text-white text-xl lg:text-2xl ">Ideation</p>
 
-                <p class="ideation-details-text font-sf text-primary text-sm mt-4 lg:mt-8">
+                <p class="ideation-details-text font-sf text-primary text-sm">
                     One of the challenges of online shopping is not being able to test out
                     what you want to purchase, so you have to deal with the disappointment after delivery. But with the
                     integration of AR technology, customers can now practically test out the product from their mobile
@@ -154,8 +154,8 @@
                 </p>
             </div>
 
-            <div class="solution mt-24 space-y-4">
-                <p class="solution-header-text font-caudex text-white text-xl lg:text-2xl lg:mt-40">The Solution</p>
+            <div class="solution mt-24 space-y-5">
+                <p class="solution-header-text font-caudex text-white text-xl lg:text-2xl ">The Solution</p>
 
                 <p class="solution-details-text font-sf text-primary text-sm">
                     After understanding the demands for this concept, we decided it would be best to make some UI
@@ -173,7 +173,7 @@
                 </ol>
             </div>
 
-            <div class="userflow mt-24 lg:mt-40 space-y-5">
+            <div class="userflow mt-24 space-y-5">
                 <p class="userflow-header-text font-caudex text-white text-xl lg:text-2xl">User flow</p>
 
                 <p class="userflow-details-text font-sf text-primary text-sm">
@@ -185,59 +185,55 @@
                 </div>
             </div>
 
-            <div class="wireframes lg:mt-40">
-                <p class="wireframes font-caudex text-white text-2xl">Wireframes</p>
+            <div class="wireframes mt-24  space-y-5">
+                <p class="wireframes-header-text font-caudex text-white text-xl lg:text-2xl">Wireframes</p>
 
-                <p class="wireframes-deats lg:my-8">
+                <p class="wireframes-details-text font-sf text-primary text-sm">
                     After creating the User flow, I began creating wireframes to validate the flow and test out possible
                     visual
                     elements
                     that will be used in the design.
                 </p>
 
-                <div class="user-flow-image w-full lg:mt-10 lg:mb-32">
-                    <img src="../assets/images/gt wireframes.png" alt="">
+                <div class="wireframes-image w-full lg:mb-32">
+                    <a href="../assets/images/gt wireframes.png"><img src="../assets/images/gt wireframes.png" alt=""></a>
                 </div>
             </div>
 
-            <div class="design-style-guide lg:mt-40">
-                <p class="design-style-guide font-caudex text-white text-2xl">Wireframes</p>
+            <div class="design-style-guide mt-24  space-y-5">
+                <p class="design-style-guide-header-text font-caudex text-white text-xl lg:text-2xl">
+                    Design style guide
+                </p>
 
-                <p class="design-style-guide-deats lg:my-8">
-                    After creating the User flow, I began creating wireframes to validate the flow and test out possible
-                    visual
-                    elements
-                    that will be used in the design.
+                <p class="design-style-guide-details-text font-sf text-primary text-sm">
+                    After creating the User flow, I began creating wireframes to validate the flow and test out
+                    possible visual elements that will be used in the design.
                 </p>
 
                 <div class="design-style-guide-image w-full lg:mt-10 lg:mb-32">
-                    <img src="../assets/images/gt design style.png" alt="">
+                    <a href="../assets/images/gt design style.png"><img src="../assets/images/gt design style.png" alt=""></a>
                 </div>
             </div>
 
-            <div class="visual-design lg:my-40">
-                <p class="visual-design font-caudex text-white text-2xl">Visual Design</p>
+            <div class="visual-design mt-24 lg:my-40 space-y-5">
+                <p class="visual-designheader-text font-caudex text-white text-xl lg:text-2xl">Visual Design</p>
 
-                <p class="visual-design-deats lg:my-8">
+                <p class="visual-design-details-text font-sf text-primary text-sm">
                     In this phase, I jump right into adding colors, and images. During this process, I produce
-                    high-quality
-                    visual designs
-                    as well as guidelines and specifications. While also making emphasis on the AR object so it's clear
-                    for
-                    the user he will
-                    transition into AR mode when tapping on the scanner.
+                    high-quality visual designs as well as guidelines and specifications. While also making emphasis
+                    on the AR object so it's clear for the user he will transition into AR mode when tapping on the scanner.
                 </p>
 
-                <div class="visual-design-image w-full lg:mt-10 lg:mb-40">
+                <div class="visual-design-images w-full space-y-3">
                     <img src="../assets/images/gt visual design 1.png" alt="">
-                    <img class="lg:mt-10" src="../assets/images/gt visual design 2.png" alt="">
+                    <img src="../assets/images/gt visual design 2.png" alt="">
                 </div>
 
-                <div class="grid grid-cols-2 lg:mb-40">
+                <div class="grid grid-cols-2 mt-24">
                     <div class="texts lg:pr-10">
-                        <p class="visual-design font-caudex text-white text-2xl">Visual Design</p>
+                        <p class="visual-design font-caudex text-white text-xl lg:text-2xl">Visual Design</p>
 
-                        <p class="visual-design-deats lg:my-8">
+                        <p class="visual-design-deats font-sf text-primary text-sm">
                             To make the whole mobile experience uniform and the AR feature, we decided that the home
                             screen
                             would need a bit of a
@@ -258,9 +254,9 @@
                 </div>
 
                 <div class="the-screen-search">
-                    <p class="visual-design font-caudex text-white text-2xl">The search screen: A new way to search</p>
+                    <p class="visual-design font-caudex text-white text-xl lg:text-2xl">The search screen: A new way to search</p>
 
-                    <p class="visual-design-deats lg:my-8">
+                    <p class="visual-design-deats font-sf text-primary text-sm">
                         The search screen: A new way to search
                         This is one side of the solution, one we believe will make shopping a more exciting one. With
                         the
@@ -277,10 +273,10 @@
                     </div>
                 </div>
 
-                <div class="test-ar lg:my-40">
-                    <p class="test-ar font-caudex text-white text-2xl">Test AR: Real-time Product Testing</p>
+                <div class="test-ar mt-24 lg:my-40 space-y-5">
+                    <p class="test-ar font-caudex text-white text-xl lg:text-2xl">Test AR: Real-time Product Testing</p>
 
-                    <p class="test-ar-deats lg:my-8">
+                    <p class="test-ar-deats font-sf text-primary text-sm">
                         The second part of the solutions features a real-time product test feature using Augmented
                         Reality
                         right there from your
@@ -324,10 +320,10 @@
                 </div>
             </div>
 
-            <div class="conclusion lg:mb-40">
-                <p class="font-caudex text-white text-2xl">Conclusion</p>
+            <div class="conclusion mt-24 space-y-5">
+                <p class="font-caudex text-white text-xl lg:text-2xl">Conclusion</p>
 
-                <p class="conclusion-deats lg:my-8">
+                <p class="conclusion-deats font-sf text-primary text-sm">
                     The entire design process of this concept design was totally a new experience for me as a designer.
                     I
                     got the
