--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -33,7 +33,9 @@
             <div
                 class="nav-container font-sf dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
                 <div class="logo">
-                    <p class="text-tiny lg:text-tiny">OZENUA OLUWATOBI</p>
+                    <p class="text-tiny lg:text-tiny">
+                        <a href="index.html">OZENUA OLUWATOBI</a>
+                    </p>
                 </div>
 
                 <div class="navlist hidden lg:block lg:w-60">
@@ -196,7 +198,8 @@
                 </p>
 
                 <div class="wireframes-image w-full lg:mb-32">
-                    <a href="../assets/images/gt wireframes.png"><img src="../assets/images/gt wireframes.png" alt=""></a>
+                    <a href="../assets/images/gt wireframes.png"><img src="../assets/images/gt wireframes.png"
+                            alt=""></a>
                 </div>
             </div>
 
@@ -211,7 +214,8 @@
                 </p>
 
                 <div class="design-style-guide-image w-full lg:mt-10 lg:mb-32">
-                    <a href="../assets/images/gt design style.png"><img src="../assets/images/gt design style.png" alt=""></a>
+                    <a href="../assets/images/gt design style.png"><img src="../assets/images/gt design style.png"
+                            alt=""></a>
                 </div>
             </div>
 
@@ -221,98 +225,105 @@
                 <p class="visual-design-details-text font-sf text-primary text-sm">
                     In this phase, I jump right into adding colors, and images. During this process, I produce
                     high-quality visual designs as well as guidelines and specifications. While also making emphasis
-                    on the AR object so it's clear for the user he will transition into AR mode when tapping on the scanner.
+                    on the AR object so it's clear for the user he will transition into AR mode when tapping on the
+                    scanner.
                 </p>
 
                 <div class="visual-design-images w-full space-y-3">
                     <img src="../assets/images/gt visual design 1.png" alt="">
                     <img src="../assets/images/gt visual design 2.png" alt="">
                 </div>
+            </div>
 
-                <div class="grid grid-cols-2 mt-24">
-                    <div class="texts lg:pr-10">
-                        <p class="visual-design font-caudex text-white text-xl lg:text-2xl">Visual Design</p>
+            <div class="further-visual-design space-y-5 lg:grid grid-cols-2 mt-24">
+                <div class="texts lg:pr-10 space-y-5 lg:space-y-0">
+                    <p class="visual-design-header-text font-caudex text-white text-xl lg:text-2xl">Visual Design</p>
 
-                        <p class="visual-design-deats font-sf text-primary text-sm">
-                            To make the whole mobile experience uniform and the AR feature, we decided that the home
-                            screen
-                            would need a bit of a
-                            tweak and we gave a minimalistic design and has the AR feature right there at the users'
-                            reach.
-                            Users can easily search
-                            using the object recognition on the search bar that allows them to scan an object. The app
-                            shows
-                            a list of results
-                            available on the Jumia inventory or tests a product from their cart using the AR feature at
-                            the
-                            center of the app
-                            navigation.
+                    <p class="visual-design-details-text font-sf text-primary text-sm">
+                        To make the whole mobile experience uniform and the AR feature, we decided that the home
+                        screen
+                        would need a bit of a
+                        tweak and we gave a minimalistic design and has the AR feature right there at the users'
+                        reach.
+                        Users can easily search
+                        using the object recognition on the search bar that allows them to scan an object. The app
+                        shows
+                        a list of results
+                        available on the Jumia inventory or tests a product from their cart using the AR feature at
+                        the
+                        center of the app
+                        navigation.
+                    </p>
+                </div>
+
+                <div class="further-visual-design-image">
+                    <a href="../assets/images/gt visual design single.png"><img src="../assets/images/gt visual design single.png" alt=""></a>
+                </div>
+            </div>
+
+            <div class="the-screen-search mt-24 space-y-5">
+                <p class="the-screen-search-header-text font-caudex text-white text-xl lg:text-2xl">
+                    The search screen: A new way to search
+                </p>
+
+                <p class="the-screen-search-details-text font-sf text-primary text-sm">
+                    The search screen: A new way to search
+                    This is one side of the solution, one we believe will make shopping a more exciting one. With
+                    the
+                    scan to search
+                    feature, users can now search for items they don't know the name of and get instant results from
+                    the
+                    Jumia inventory and
+                    make quick purchases.
+                </p>
+
+                <div class="grid grid-cols-2 gap-x-2 lg:gap-x-10 lg:mt-14">
+                    <a href="../assets/images/search screen 1.png"><img src="../assets/images/search screen 1.png" alt=""></a>
+                    <a href="../assets/images/search screen 2.png"><img src="../assets/images/search screen 2.png" alt=""></a>
+                </div>
+            </div>
+
+            <div class="test-ar mt-24 space-y-5">
+                <p class="test-ar font-caudex text-white text-xl lg:text-2xl">Test AR: Real-time Product Testing</p>
+
+                <p class="test-ar-deats font-sf text-primary text-sm">
+                    The second part of the solutions features a real-time product test feature using Augmented
+                    Reality
+                    right there from your
+                    mobile phone. This technology helps you simulate products on flat surfaces and your face as
+                    well.
+                    The technology is
+                    limitless and a whole lot can be done using this technological innovation.
+                </p>
+
+                <p class="font-sf text-primary text-sm lg:mt-8">
+                    Click here to <a class="text-blue-900 underline" href="#">test</a> it out.
+                </p>
+
+                <div class="space-y-10 lg:grid grid-cols-2 gap-x-10 lg:mt-10">
+                    <div class="info-1 space-y-5">
+                        <a href="../assets/images/test ar 1.png"><img src="../assets/images/test ar 1.png" alt=""></a>
+
+                        <p class="info-text font-sf text-primary text-sm lg:mt-8">
+                            To use the feature, the user selects the AR button and scans for a flat surface which
+                            may be
+                            the floor or the wall, the
+                            calibration changes based on the product type.
                         </p>
                     </div>
 
-                    <img src="../assets/images/gt visual design single.png" alt="">
-                </div>
+                    <div class="info-2 space-y-5">
+                        <a href="../assets/images/test ar 2.png"><img src="../assets/images/test ar 2.png" alt=""></a>
 
-                <div class="the-screen-search">
-                    <p class="visual-design font-caudex text-white text-xl lg:text-2xl">The search screen: A new way to search</p>
-
-                    <p class="visual-design-deats font-sf text-primary text-sm">
-                        The search screen: A new way to search
-                        This is one side of the solution, one we believe will make shopping a more exciting one. With
-                        the
-                        scan to search
-                        feature, users can now search for items they don't know the name of and get instant results from
-                        the
-                        Jumia inventory and
-                        make quick purchases.
-                    </p>
-
-                    <div class="grid grid-cols-2 gap-x-10 lg:mt-14">
-                        <img src="../assets/images/search screen 1.png" alt="">
-                        <img src="../assets/images/search screen 2.png" alt="">
-                    </div>
-                </div>
-
-                <div class="test-ar mt-24 lg:my-40 space-y-5">
-                    <p class="test-ar font-caudex text-white text-xl lg:text-2xl">Test AR: Real-time Product Testing</p>
-
-                    <p class="test-ar-deats font-sf text-primary text-sm">
-                        The second part of the solutions features a real-time product test feature using Augmented
-                        Reality
-                        right there from your
-                        mobile phone. This technology helps you simulate products on flat surfaces and your face as
-                        well.
-                        The technology is
-                        limitless and a whole lot can be done using this technological innovation.
-                    </p>
-
-                    <p class="lg:mt-8">Click here to <a class="text-blue-900 underline" href="#">test</a> it
-                        out.</p>
-
-                    <div class="grid grid-cols-2 gap-x-10 lg:mt-10">
-                        <div class="info-1">
-                            <img src="../assets/images/test ar 1.png" alt="">
-
-                            <p class="jumiar-deats lg:mt-8">
-                                To use the feature, the user selects the AR button and scans for a flat surface which
-                                may be
-                                the floor or the wall, the
-                                calibration changes based on the product type.
-                            </p>
-                        </div>
-                        <div class="info-2">
-                            <img src="../assets/images/test ar 2.png" alt="">
-
-                            <p class="jumiar-deats lg:mt-8">
-                                The user is prompted to select a product from their cart or search for a new product
-                                using
-                                the regular search or the
-                                scan option.
-                            </p>
-                        </div>
+                        <p class="info-text font-sf text-primary text-sm lg:mt-8">
+                            The user is prompted to select a product from their cart or search for a new product
+                            using
+                            the regular search or the
+                            scan option.
+                        </p>
                     </div>
 
-                    <p class="jumiar-deats lg:mt-8">
+                    <p class="how-test-ar-woks-text font-sf text-primary text-sm lg:mt-8">
                         Once the product is selected, it would be placed on the surface, and the user can take a virtual
                         tour around the chosen
                         product.
@@ -321,9 +332,9 @@
             </div>
 
             <div class="conclusion mt-24 space-y-5">
-                <p class="font-caudex text-white text-xl lg:text-2xl">Conclusion</p>
+                <p class="conclusion-header-text font-caudex text-white text-xl lg:text-2xl">Conclusion</p>
 
-                <p class="conclusion-deats font-sf text-primary text-sm">
+                <p class="conclusion-details-text font-sf text-primary text-sm">
                     The entire design process of this concept design was totally a new experience for me as a designer.
                     I
                     got the
@@ -339,7 +350,7 @@
                     mind-blowing experience for me as I never actually thought I'd have been able to do so at first.
                 </p>
 
-                <p class="conclusion-deats lg:mt-8">
+                <p class="conclusion-details-text font-sf text-primary text-sm lg:mt-8">
                     Next time, I will like to work on easier flows for this design and incorporate it into the
                     application's
                     web
@@ -355,29 +366,33 @@
         </section>
     </div>
 
-    <footer class="lg:p-20 dark:bg-black">
-        <p class="header-text dark:text-white font-caudex text-5xl">Got an idea? <span class="underline">Let’s build
-                together</span>
-        </p>
+    <footer class="bg-black lg:px-16 py-14 lg:py-24 mt-24">
+        <div class="container mx-auto px-4">
+            <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
+                <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5">
+                    <p class="got-an-idea font-caudex text-white text-2xl lg:text-5xl">
+                        Got an idea?
+                    </p>
 
-        <div class="contacts text-white text-sm lg:w-2/4">
-            <ul class="flex justify-between items-center lg:mt-8">
-                <li>Instagram</li>
-                <li>Youtube</li>
-                <li>Dribble</li>
-                <li>LinkedIn</li>
-            </ul>
+                    <p class="lets-talk font-sf text-white text-base lg:text-xl">
+                        Let's talk about it.
+                    </p>
+                </div>
 
-            <ul class="flex justify-between items-center lg:mt-5">
-                <li>Medium</li>
-                <li>Behance</li>
-                <li>Twitter</li>
-                <li>Codepen</li>
-            </ul>
+                <div class="contacts font-sf lg:w-2/4 text-white text-xs">
+                    <div class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
+                        <a class="instagram-footer-link" href="#">Instagram</a>
+                        <a class="youtube-footer-link" href="#">Youtube</a>
+                        <a class="dribble-footer-link" href="#">Dribble</a>
+                        <a class="linkedin-footer-link" href="#">LinkedIn</a>
+                        <a class="behance-footer-link" href="#">Behance</a>
+                        <a class="twitter-footer-link" href="#">Twitter</a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
-
-
 
 
     <div id="cursor" class="cursor invisible lg:visible bg-black dark:bg-white">
