--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,9 @@
     <nav>
       <div class="nav-container font-sf dark:text-white py-4 lg:py-7 flex justify-between items-center tracking-widest">
         <div class="logo">
-          <p class="text-tiny lg:text-tiny">OZENUA OLUWATOBI</p>
+          <p class="text-tiny lg:text-tiny">
+            <a href="index.html">OZENUA OLUWATOBI</a>
+          </p>
         </div>
 
         <div class="navlist hidden lg:block lg:w-60">
@@ -721,9 +723,9 @@
     </section>
   </div>
 
-  <footer class="bg-black lg:px-16 py-14 lg:py-24">
+  <footer class="bg-black lg:px-16 py-14 lg:py-24 mt-24">
     <div class="container mx-auto px-4">
-      <div class="first-container lg:flex justify-between items-end space-y-5 lg:space-y-0 py-8">
+      <div class="first-container lg:flex justify-between items-end space-y-10 lg:space-y-0 py-8">
         <div class="texts-container flex lg:block items-baseline space-x-2 lg:space-y-5">
           <p class="got-an-idea font-caudex text-white text-2xl lg:text-5xl">
             Got an idea?
@@ -742,7 +744,8 @@
             <a class="linkedin-footer-link" href="#">LinkedIn</a>
             <a class="behance-footer-link" href="#">Behance</a>
             <a class="twitter-footer-link" href="#">Twitter</a>
-          </ul>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
